--- a/FinApp.Infrastructure/FinApp.Infrastructure.csproj
+++ b/FinApp.Infrastructure/FinApp.Infrastructure.csproj
@@ -5,7 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Expenses\Services\" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FinApp.Domain\FinApp.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Expenses\Services\sourceData.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
