--- a/FinApp/FinApp.Api.csproj
+++ b/FinApp/FinApp.Api.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinApp.Domain\FinApp.Domain.csproj" />
+    <ProjectReference Include="..\FinApp.Infrastructure\FinApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
