:building_construction: Automapper ExpenseProfile updated

--- a/FinApp.Infrastructure/FinApp.Infrastructure.csproj
+++ b/FinApp.Infrastructure/FinApp.Infrastructure.csproj
@@ -20,4 +20,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>FinApp.UnitTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
