:building_construction: Switched to simple- one project solution

--- a/FinApp.Domain/FinApp.Domain.csproj
+++ b/FinApp.Domain/FinApp.Domain.csproj
@@ -8,4 +8,9 @@
     <ProjectReference Include="..\FinApp.Common\FinApp.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Expenses\Consumptions\" />
+    <Folder Include="Expenses\Services\" />
+  </ItemGroup>
+
 </Project>
