--- a/FinApp/Dockerfile
+++ b/FinApp/Dockerfile
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["FinApp/FinApp.csproj", "FinApp/"]
-RUN dotnet restore "FinApp/FinApp.csproj"
+COPY ["FinApp/FinApp.Api.csproj", "FinApp/"]
+RUN dotnet restore "FinApp/FinApp.Api.csproj"
 COPY . .
 WORKDIR "/src/FinApp"
-RUN dotnet build "FinApp.csproj" -c Release -o /app/build
+RUN dotnet build "FinApp.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "FinApp.csproj" -c Release -o /app/publish
+RUN dotnet publish "FinApp.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "FinApp.dll"]
+ENTRYPOINT ["dotnet", "FinApp.Api.dll"]
