--- a/FinApp/appsettings.json
+++ b/FinApp/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": "http://localhost:3000"
+  "AllowedOrigins": "http://localhost:3000,http://192.168.0.32:3000,https://192.168.0.32:49161"
 }
